# refrakt

./: .gitignore  CMakeLists.txt  README.md  flame.sln  flame.vcxproj  flame.vcxproj.filters  variations.yaml
shaders/: density.glsl  density_frag.glsl  density_vert.glsl  flame.glsl  particle_frag.glsl  particle_vert.glsl  quad_frag.glsl  quad_vert.glsl  tonemap.glsl
shaders/include/: buffers.glsl  math.glsl  random.glsl
shaders/templates/: animate.tpl.glsl  xform_select.tpl.glsl
src/: buffer_cache.cpp  buffer_cache.hpp  buffer_objects.hpp  compute_shader.cpp  compute_shader.hpp  flame.cpp  flame.hpp  gl_util.cpp  hammersley.cpp  histogram_plotter.hpp  main.cpp  shaders.hpp  shuffle_buffers.cpp  util.cpp  util.hpp  variation_table.cpp  variation_table.hpp
